Source/WebCore/platform/network/soup/SoupNetworkSession.h
@@ -58,7 +58,8 @@ public:
 
     void setupHTTPProxyFromEnvironment();
 
-    void setAcceptLanguages(const Vector<String>&);
+    static void setInitialAcceptLanguages(const CString&);
+    void setAcceptLanguages(const CString&);
 
     static void setShouldIgnoreTLSErrors(bool);
     static void checkTLSErrors(SoupRequest*, SoupMessage*, std::function<void (const ResourceError&)>&&);
